# advent-of-spin-2023-c3

./: .golangci.yaml  README.md  justfile  spin.toml  stats.txt  test.hurl
assets/: index.html  styles.json
go-api/: .gitignore  go.mod  main.go
py-api/: Pipfile  app.py
rust-api/: Cargo.toml
rust-api/src/: lib.rs
