[package]
name = "rust-api"
authors = ["Dimitri <5898931+dimitrilw@users.noreply.github.com>"]
description = "rust-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# spin standard deps
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
# lib additional deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[workspace]
